# PilonPolisher

./: .gitignore  Dockerfile  Makefile  README.md  Singularity.def  pyproject.toml
scripts/: docker_install_htslib.sh  docker_install_minimap2.sh  docker_install_pilon.sh  docker_install_polisher.sh  docker_install_python3.11.sh  docker_install_samtools.sh  docker_update.sh
src/: Workflows.py  cli.py  test_executor.py  tools.py
